--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -241,19 +241,17 @@
 <footer>
     <div class="footer-container">
         <div class="footer-box">
-            <h3>Title 1</h3>
+            <h3>Contact Details</h3>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <!-- More links here -->
+                <li><a href="#">Phone</a></li>
+                <li><a href="#">Text</a></li>
             </ul>
         </div>
         <div class="footer-box">
-            <h3>Title 2</h3>
+            <h3>Social Media</h3>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <!-- More links here -->
+                <li><a href="www.instagram.com">Instagram</a></li>
+                <li><a href="www.youtube.com">YouTube</a></li>
             </ul>
         </div>
         <div class="footer-box">
@@ -261,7 +259,6 @@
             <ul>
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
-                <!-- More links here -->
             </ul>
         </div>
     </div>
