--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -69,22 +69,22 @@
 
         </div>
         <div class="box">
-            <img src="images/me.JPG" alt="">
+            <img src="images/me.JPG" alt="my picture">
             <p>My goal is to leverage my expertise to drive innovation and effect meaningful change. 
                 I am eager to connect and collaborate, aspiring to achieve excellence. Let's embark on this journey together.</p>
         </div>
         <div class="box">
-            <img src="images/education.png" alt="">
+            <img src="images/education.png" alt="image indicating classroom">
             <p>Education: <br><br>Masters in Software Engineering <br>
                 Bachelors in Information Technology
             </p>
         </div>
         <div class="box">
-            <img src="images/journey.png" alt="">
+            <img src="images/journey.png" alt="image indicating journey">
             <p>Completing my undergraduate studies from Mumbai India I moved to Boston Mass. USA for my future studies and endeavors</p>
         </div>
         <div class="box">
-            <img src="images/hobbies.png" alt="">
+            <img src="images/hobbies.png" alt="image showcasing music instruments and sports">
             <p>I am musician and I play the guitar, drums and fw other instruments. I play cricket, chess and online multiplayer games</p>
         </div>
 
