--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -248,4 +248,11 @@
     </footer>
 
 </body>
+
+<script>
+    function refreshPage() {
+        location.reload(true);
+    }
+</script>
+
 </html>
