index script edits

--- a/Assignment-3/table.html
+++ b/Assignment-3/table.html
@@ -9,8 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
 </head>
+<H2>Jilson Correia NUID: 002695019</H2>
 <body onload = " imageAction() ">
-	<H2>Jilson Correia NUID: 002695019</H2>
+	
 	<table id="myTable">
 		<tr>
 			<th></th>
@@ -21,7 +22,7 @@
 			<th>TYPE</th>
 			<th>BUDGET<br />#</th>
 			<th>PERCENTAGE</th>
-			<th>DELETE</th>
+			<th class = delete_col>DELETE</th>
 		</tr>
 		<tr>
 			<td><input type="checkbox" /><br /><br /><img src="down.png" width="25px" /></td>
