--- a/Assignment4/Form.html
+++ b/Assignment4/Form.html
@@ -3,16 +3,24 @@
  <head>
   <title>Feedback</title>
   <style>
-    label {	float: left;
-			width: 150px;}
-      #container{
-          width: 700px;
-          margin: auto;
-          background-color: beige;
-      } 
-      main{
-          padding: 50px;
-      }
+    label {	
+		float: left;
+		width: 150px;
+	}
+      
+	#container {
+        width: 700px;
+        margin: auto;
+        background-color: beige;
+    } 
+    main{
+        padding: 50px;
+    }
+
+	.error {
+		color: red;
+	}
+
   </style>
  </head>
  <body>
@@ -23,33 +31,33 @@
 	 <h3>Love something? Hate something? Let us know!</h3>
 		 Note : Fields marked with an asterisk(*) are mandatory
 		 <br><br>
-		 <form method="post" novalidate>
+		 <form method="post" id="feedbackForm" novalidate>
 			<label>Title*:</label>
 			<input type="radio" name="title" id="miss" value="miss" required="required"/>Miss
 			<input type="radio" name="title" id="mr" value="mr" required="required"/>Mr.
 			<input type="radio" name="title" id="mrs" value="mrs" required="required"/>Mrs.
 			<br><br>
 			<label for="firstName">First Name*:</label>
-			<input type="text" name="firstName" id="firstName" placeholder="First Name" />	
+			<input type="text" name="firstName" id="firstName" placeholder="First Name" required minlength="2" maxlength="50" pattern="[A-Za-z0-9]+" />	
 			<br><br>
 			
 
 			<label for="lastName">Last Name*:</label>
-			<input type="text" name="lastName" id="lastName" placeholder="Last Name" />
+			<input type="text" name="lastName" id="lastName" placeholder="Last Name" required minlength="2" maxlength="50" pattern="[A-Za-z0-9]+" />
 			<br><br>
 			
 
 			<label for="emailId">Email Id*:</label>
-			<input type="text" name="emailId" id="emailId" placeholder="yourname@domain.com" />
+			<input type="text" name="emailId" id="emailId" placeholder="yourname@domain.com" required pattern="[a-zA-Z0-9._%+-]+@northeastern.edu$" />
 			<br><br>
 			
 
 			<label for="phoneNumber">Phone Number*:</label>
-			<input type="text" name="phoneNumber" id="phoneNumber" placeholder="xxx-xxx-xxxx" />
+			<input type="text" name="phoneNumber" id="phoneNumber" placeholder="xxx-xxx-xxxx" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
 			<br><br>
 			
             <label for="zipcode">ZipCode*:</label>
-			<input type="text" name="zipcode" id="zipcode" placeholder="xxxxxx" />
+			<input type="text" name="zipcode" id="zipcode" placeholder="xxxxxx" required pattern="[0-9]{6}" />
 			<br><br>
              
             <label for="zipcode">How did you hear*:</label>
